--- a/.github/workflows/automatic-add-issue-to-board.yml
+++ b/.github/workflows/automatic-add-issue-to-board.yml
@@ -1,12 +1,7 @@
 name: Add issue or pull request to project board
 
 on:
-  issues:
-    types:
-      - opened
-  pull_request_target:
-    types: 
-      - opened
+  workflow_call:
 
 jobs:
   add-to-project:
