--- a/.github/workflows/automatic-add-issue-to-board.yml
+++ b/.github/workflows/automatic-add-issue-to-board.yml
@@ -10,6 +10,23 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: 'Get Previous tag'
+        id: previoustag
+        uses: "WyriHaximus/github-action-get-previous-tag@v1"
+        with:
+          fallback: 1.0.0
+      - name: 'Get next minor version'
+        id: semvers
+        uses: "WyriHaximus/github-action-next-semvers@v1"
+        with:
+          version: ${{ steps.previoustag.outputs.tag }}
+      - name: 'Create new milestone'
+        id: createmilestone
+        uses: "WyriHaximus/github-action-create-milestone@v1"
+        with:
+          title: ${{ steps.semvers.outputs.patch }}
       - name: Get current date
         id: date
         run: echo "date=$(date +'%Y-%m-%dT%H:%M:%S')" >> $GITHUB_ENV
@@ -25,5 +42,5 @@ jobs:
           project-url: https://github.com/orgs/esx-framework/projects/9
           github-token: ${{ secrets.MY_GITHUB_TOKEN }}
           item-id: ${{ steps.add-project.outputs.itemId }}
-          field-keys: Date,Priority
-          field-values: ${{ env.date }},Unrealised
+          field-keys: Date,Priority,ReleaseVersion
+          field-values: ${{ env.date }},Unrealised,${{ steps.semvers.outputs.patch }}
