Update and rename release.yml to simple-release.yml

--- a/.github/workflows/simple-release.yml
+++ b/.github/workflows/simple-release.yml
@@ -90,7 +90,7 @@ jobs:
             echo "DETERMINED_VERSION=${{ steps.semvers.outputs.patch }}" >> $GITHUB_ENV
           fi
       - name: 'Download Bump manifest version js file and run in node'
-        run: curl -f https://raw.githubusercontent.com/CommunityRP-FiveM-Server/.github/961b50cd10fdda968a7a8a4b78af5fd2447cf650/.github/actions/bump-manifest-version.js | node -
+        run: curl -f https://raw.githubusercontent.com/esx-framework/.github/main/.github/actions/bump-manifest-version.js | node -
         env:
           TGT_RELEASE_VERSION: ${{ env.DETERMINED_VERSION }}
       - name: Push manifest change
