--- a/.github/workflows/formatter-lua.yml
+++ b/.github/workflows/formatter-lua.yml
@@ -19,7 +19,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: ${{ github.head_ref }}
+          ref: ${{ github.event.pull_request.head.ref }}
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
           fetch-depth: 0
           token: ${{ secrets.MY_GITHUB_TOKEN || secrets.GITHUB_TOKEN }}
           
