--- a/.github/workflows/formatter-web.yml
+++ b/.github/workflows/formatter-web.yml
@@ -19,8 +19,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          ref: ${{ github.head_ref }}
+          ref: ${{ github.event.pull_request.head.ref }}
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
           fetch-depth: 0
+          
       - uses: actions/setup-node@v3
         with:
           node-version: "16"
