--- a/.github/workflows/formatter-lua.yml
+++ b/.github/workflows/formatter-lua.yml
@@ -38,6 +38,9 @@ jobs:
       - name: Run replace script
         if: ${{ inputs.any-changed-files-list == 'true' }}
         run: node script.js do
+
+      - name: Download centralized .prettierrc
+        run: curl -s -O https://raw.githubusercontent.com/esx-framework/.github/main/.github/actions/.editorconfig
         
       - name: Install stylua and check format
         id: check-lua-code-format
@@ -46,7 +49,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           version: v0.19.1
-          args: --check ${{ inputs.all-changed-files-list }}
+          args: --config-path .editorconfig --check ${{ inputs.all-changed-files-list }}
         continue-on-error: true
 
       - name: Run formatter
@@ -55,7 +58,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           version: v0.19.1
-          args: -- ${{ inputs.all-changed-files-list }}
+          args: --config-path .editorconfig -- ${{ inputs.all-changed-files-list }}
 
       - name: Run undo script
         if: ${{ inputs.any-changed-files-list == 'true' }}
