--- a/.github/workflows/simple-release.yml
+++ b/.github/workflows/simple-release.yml
@@ -24,7 +24,7 @@ jobs:
     name: Build and Create Tagged release
     runs-on: ubuntu-latest
     env:
-      GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.ESX_TOKEN || secrets.GITHUB_TOKEN }}
       
     steps:
       - name: Convert 'web' input to boolean and set as env var
@@ -42,7 +42,7 @@ jobs:
         with:
           fetch-depth: 0
           ref: ${{ github.event.repository.default_branch }}
-          token: ${{ secrets.MY_GITHUB_TOKEN }}
+          token: ${{ secrets.ESX_TOKEN || secrets.GITHUB_TOKEN }}
 
       - name: Setup node
         uses: actions/setup-node@v3
@@ -149,4 +149,4 @@ jobs:
 
         env:
           CI: false
-          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.ESX_TOKEN || secrets.GITHUB_TOKEN }}
