--- a/.github/workflows/simple-release.yml
+++ b/.github/workflows/simple-release.yml
@@ -41,6 +41,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+          ref: ${{ github.head_ref }}
           token: ${{ secrets.ESX_TOKEN || secrets.GITHUB_TOKEN }}
 
       - name: Setup node
