--- a/.github/workflows/simple-release.yml
+++ b/.github/workflows/simple-release.yml
@@ -110,9 +110,10 @@ jobs:
 
       - name: Install replacer lib
         run: npm i replace-in-file
-          
+        
       - name: 'Download Bump manifest version js file and run in node'
-        run: | 
+        id: replace_script
+        run: |
           curl -f https://raw.githubusercontent.com/esx-framework/.github/main/.github/actions/bump-manifest-version.js | node - > set_env.sh
           bash set_env.sh
         env:
