remove unused set_env.sh in manifest version replacer

--- a/.github/workflows/simple-release.yml
+++ b/.github/workflows/simple-release.yml
@@ -114,14 +114,14 @@ jobs:
       - name: 'Download Bump manifest version js file and run in node'
         id: replace_script
         run: |
-          curl -f https://raw.githubusercontent.com/esx-framework/.github/main/.github/actions/bump-manifest-version.js | node - > set_env.sh
-          bash set_env.sh
+          curl -f https://raw.githubusercontent.com/esx-framework/.github/main/.github/actions/bump-manifest-version.js | node
         env:
           TGT_RELEASE_VERSION: ${{ env.DETERMINED_VERSION }}
+          
       - name: Push manifest change
         uses: EndBug/add-and-commit@v8
         with:
-          add: ${{ env.FXMANIFEST_FILE_CHANGES }}
+          add: '**/fxmanifest.lua'
           push: true
           author_name: Manifest Bumper
           author_email: 41898282+github-actions[bot]@users.noreply.github.com
