--- a/.github/workflows/simple-release-web.yml
+++ b/.github/workflows/simple-release-web.yml
@@ -125,7 +125,7 @@ jobs:
       - name: Push manifest change
         uses: EndBug/add-and-commit@v8
         with:
-          add: ${{ inputs.fxmanifestPath || '**/fxmanifest.lua' }}
+          add: 'fxmanifest.lua'
           push: true
           author_name: Manifest Bumper
           author_email: 41898282+github-actions[bot]@users.noreply.github.com
